--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ name = "tdf"
 name = "tdf"
 
 [dependencies]
-poppler-rs = { version = "0.24.1", default-features = false, features = ["v23_7"] }
+poppler-rs = { git="https://github.com/Doublonmousse/poppler-patch.git", default-features = false, features = ["v20_9"] }
 cairo-rs = { version = "0.20.0", default-features = false, features = ["png"] }
 # we're using this branch because it has significant performance fixes that I'm waiting on responses from the upstream devs to get upstreamed. See https://github.com/ratatui-org/ratatui/issues/1116
 ratatui = { git = "https://github.com/itsjunetime/ratatui.git" }
